tests/unit/default/syntax-error/083-add-pk-table.x.t
---- IN ----
+PK%table|
---- OUT ----
---- ERR ----
syntax: expected `.` or `(` after `+PK%table` near `|` at position 9 - at line 1
---- EXIT ----
1
